<resources>
    <string name="app_name">Smart pantry</string>
    <string name="name">SMART PANTRY</string>
    <string name="login">Login</string>
    <string name="siginin">Sigin in with : </string>
    <string name="alredyhavingaccount">Alredy having an account ? Login</string>
    <string name="nothavngaccount">Not Having an account ? Sign up</string>
    <string name="reg">Register</string>
    <string name="fllname">Full Name</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="loc">Location Settings</string>
    <string name="settings">Settings</string>
    <string name="dash">Dashboard</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="item_name">Item Name</string>
    <string name="weight">Weight :</string>
    <string name="zero">0 KG</string>
    <string name="hundred">100 KG</string>
    <string name="details">More</string>
    <string name="search_loc">Search Super Market</string>
    <string name="add_supermarket">Add Market</string>
    <string name="min_weight">0 KG</string>
    <string name="max_weight">5 KG</string>
    <string name="alarmweight">0 KG</string>
    <string name="alarm_weight">Set Alaram Weight</string>
    <string name="save">Save</string>
    <string name="address">Address :</string>
    <string name="profile_user">User Profile</string>
    <string name="Register_item">Add Item</string>
    <string name="copy">Paste the code below in the IOT device</string>
    <string name="random">12345</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_dashboard">Dashboard</string>
</resources>
