<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smart_pantry.Dashboard">

    <item
        android:id="@+id/i_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/i_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/i_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/i_location"
        android:title="@string/loc" />
    <item
        android:id="@+id/i_dash"
        android:title="@string/dash" />
    <item
        android:id="@+id/i_logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile" />
</menu>